2014-12-13  Kaz Kylheku  <kaz@kylheku.com>

	Factor out some compiling commands into macros.

	* Makefile (COMPILE_C, COMPILE_C_WITH_DEPS, LINK_PROG): New
	macro strings.
	(dbg/%.o, opt/*.o, %.o, $(PROG), $(PROG)-dbg, conftest,
	conftest2): These targets now use these commands.

2014-12-11  Kaz Kylheku  <kaz@kylheku.com>

	Build bugfix: if a config.h header exists in $(top_srcdir),
	then that header is used when building in a separate directory,
	instead of the config.h generated in that directory.
	To fix this, we move config.h into a config/ subdirectory.
	The $(top_srcdir)/config is not in the include search path
	when buiding in a separate build directory.
	While we are at it, let's move all the configure materials
	generated by the configure script into config/.

	* Makefile: include config/config.make at the top. Removing the
	rule which asserts the existence of configuration based on
	the presence of config.make.
	(CFLAGS): Add $(conf_dir) to include search path with -iquote.
	(notconfigured): New conditionally-defined target for producing
	the error message when the build system is not configured.
	(NL, DEP): New variables.
	($(OBJS)): Make dependent on config/config.make and config/config.h
	with help of DEP macro.
	(opt/lex.yy.o, dbg/lex.yy.o): Express dependency using DEP.
	(y.tab.h): Split off as a dependent on y.tab.c rather than
	a co-target in the rule.  The rule has a body to handle
	the situation when y.tab.h is missing for some reason, but
	y.tab.c already exists (and so won't be re-made, and so
	y.tab.h won't be remade).

	* configure: Require GNU Make 3.81 rather than 3.80.
	(conf_dir): New variable.
	(config_h, config_make, config_log): New variables.  These are used in
	place of config.h, config.make and config.log.  Add conf_dir to
	config.make variable.

2014-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* configure (have_git): New variable and configure test for git.

	* Makefile (SRCS): Only set if git is available.